[tool.setuptools]
py-modules = ["comgra"]
[project]
name = "comgra"
version = "0.9.4"
authors = [
    { name="Florian Dietz", email="floriandietz44@gmail.com" },
]
dependencies = [
    'torch',
    'dash',
    'dash-svg',
    'msgpack',
    'numpy',
    'pandas',
]
description = "A package for analyzing computation graphs"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[project.urls]
"Homepage" = "https://github.com/FlorianDietz/comgra"
"Bug Tracker" = "https://github.com/FlorianDietz/comgra/issues"
[project.scripts]
comgra = "comgra.scripts.server:main"
comgra-test-run = "comgra.scripts.run:main"